P4: okay-spark — one Aggregator, local or distributed
(init, add, merge) handed straight to rdd.aggregate/aggregateByKey
and to the Dataset-side typed-column Aggregator (encoders are the
caller's until the Schema-algebra derivation lands with okay-codec).
Aggregator extends Serializable in the core so the closures ship as
tasks. Spark 4.0 through for3Use2_13, JDK 21 with add-opens, forked
tests. Proven on a local-mode session: variance across 8 partitions
equals the Chunks run, zip computes two statistics in one distributed
pass, aggregateByKey and the typed column agree with references.